[package]
name = "wrench"
version = "0.1.0"
authors = ["Yuchen Lin <yuchennil@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use the pre-release master branch of sodiumoxide because kdfs haven't been
# ported yet as of sodiumoxide 0.2.5
sodiumoxide = { git = "https://github.com/sodiumoxide/sodiumoxide" }
